--- a/cclhm0069/mod4b/sem13_ap.ipynb
+++ b/cclhm0069/mod4b/sem13_ap.ipynb
@@ -6,9 +6,14 @@
         "id": "zFuLfG-ARLKn"
       },
       "source": [
-        "# Python do Zero I\n",
-        "\n",
-        "<small>Material para o Live Coding 1, 26/01/2022, referente à [semana 12 do curso](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem12.html#)</small>\n",
+        "# Python do Zero I e II"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Material para o Live Coding 1, 26/01/2022, referente à [semana 13 do curso](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem13.html#)\n",
         "\n",
         "O objetivo desse encontro virtual é tirar dúvidas quanto à instalação do Python e do Visual Studio Code e apresentar alguns conceitos básicos de programação."
       ]
@@ -38,7 +43,7 @@
         "id": "8ziYPWmW4LMG"
       },
       "source": [
-        "## Pq Python?\n",
+        "### Pq Python?\n",
         "\n",
         "[Python](https://docs.constellate.org/key-terms/#python) é uma das linguagens de programação que mais crescem no mundo. Aprender Python] é uma ótima escolha pois é uma linguagem:\n",
         "\n",
@@ -54,7 +59,7 @@
         "id": "7a76TGY8CkGv"
       },
       "source": [
-        "## Anatomia de um script Python\n",
+        "### Anatomia de um script Python\n",
         "Adaptado do curso [Introduction to Cultural Analytics & Python](https://melaniewalsh.github.io/Intro-Cultural-Analytics/02-Python/03-Anatomy-Python-Script.html) de Melanie Walsh.\n",
         "\n",
         "Geralmente, o código escrito em Python para executar alguma função, salvo em um arquivo com a extensão *.py*, chamdo **script** possui uma estrutura que segue certo padrão. Ou melhor, possui um conjunto de elementos básicos e lógicos.\n",
@@ -97,7 +102,7 @@
         "id": "CLX4JZsXEgUS"
       },
       "source": [
-        "## Terminal \n",
+        "### Terminal \n",
         "\n",
         "Além de poder executar comandos de Python no Jupyter Notebook, podemos e comumente vamos executar comandos e scripts diretamente através de linhas de comando no terminal.\n",
         "\n",
@@ -119,7 +124,7 @@
         "id": "NZ8FFA3mplON"
       },
       "source": [
-        "## Operadores Aritméticos\n",
+        "### Operadores Aritméticos\n",
         "\n",
         "[Python Basics 1](https://hub.binder.constellate.org/user/ithaka-tdm-notebooks-mb3z11hb/notebooks/python-basics-1.ipynb) de [Nathan Kelber](http://nkelber.com/) e Ted Lawless"
       ]
@@ -147,7 +152,7 @@
         "id": "qKXzm0yPplOO"
       },
       "source": [
-        "## Operadores relacionais\n",
+        "### Operadores relacionais\n",
         "\n",
         "[Python Basics 2](https://hub.binder.constellate.org/user/ithaka-tdm-notebooks-mb3z11hb/notebooks/python-basics-2.ipynb) de [Nathan Kelber](http://nkelber.com/) e Ted Lawless"
       ]
@@ -174,7 +179,7 @@
         "id": "r3ib_6FVplOQ"
       },
       "source": [
-        "## Operadores Booleanos (and/or/not)\n",
+        "### Operadores Booleanos (and/or/not)\n",
         "\n",
         "[Python Basics 2](https://hub.binder.constellate.org/user/ithaka-tdm-notebooks-mb3z11hb/notebooks/python-basics-2.ipynb) de [Nathan Kelber](http://nkelber.com/) e Ted Lawless"
       ]
@@ -185,7 +190,7 @@
         "id": "XGi5fFnEplOR"
       },
       "source": [
-        "### and\n",
+        "#### and\n",
         "\n",
         "```True and True = True```"
       ]
@@ -196,7 +201,7 @@
         "id": "IS-idiuGplOR"
       },
       "source": [
-        "### or\n",
+        "#### or\n",
         "\n",
         "|Expressão|Avaliação|\n",
         "|---|---|\n",
@@ -212,7 +217,7 @@
         "id": "ap2Rc0yZGR4-"
       },
       "source": [
-        "## Variáveis\n",
+        "### Variáveis\n",
         "Traduzido de [Variables](https://melaniewalsh.github.io/Intro-Cultural-Analytics/02-Python/04-Variables.html) Melanie Walsh.\n",
         "\n",
         "As variáveis são um dos blocos de construção fundamentais do Python. Uma variável é como um pequeno contêiner onde você armazena valores e dados, como nomes de arquivos, palavras, números, coleções de palavras e números e muito mais."
@@ -224,7 +229,7 @@
         "id": "gOqxLjMzJOD_"
       },
       "source": [
-        "### Definindo variáveis\n",
+        "#### Definindo variáveis\n",
         "\n",
         "O nome da variável apontará para um valor que você \"atribui\" a ele. Você pode pensar em atribuição de variável como colocar um valor \"dentro\" da variável, como se a variável fosse uma pequena caixa 🎁\n",
         "\n",
@@ -262,7 +267,7 @@
         "id": "l2dffzozH5Rn"
       },
       "source": [
-        "### Nomeando variáveis\n",
+        "#### Nomeando variáveis\n",
         "\n",
         "Os nomes das variáveis podem ser tão longos ou curtos quanto você quiser e podem incluir:\n",
         "- letras maiúsculas e minísculas (A-Z)\n",
@@ -289,7 +294,7 @@
         "id": "SPzeKbw_plOU"
       },
       "source": [
-        "### Palavras-chave do Python\n",
+        "#### Palavras-chave do Python\n",
         "Retirado de [Pense Python](https://penseallen.github.io/PensePython2e/02-vars-expr-instr.html) de Allen Downey, capítulo 2.\n",
         "\n",
         "O interpretador usa palavras-chave para reconhecer a estrutura do programa e elas não podem ser usadas como nomes de variável.\n",
@@ -315,7 +320,7 @@
         "id": "QDQODw3GJb6_"
       },
       "source": [
-        "### Redefinindo variáveis\n",
+        "#### Redefinindo variáveis\n",
         "\n",
         "As variáveis não são fixas, é possível atribuir novos valores a uma varivável que já havia sido definida anteriormente."
       ]
@@ -338,7 +343,7 @@
         "id": "b13Gs3mSKQps"
       },
       "source": [
-        "## Tipos de Dados\n"
+        "### Tipos de Dados\n"
       ]
     },
     {
@@ -419,6 +424,18 @@
         "print(new_name)\n",
         "\n",
         "print(f'Olá, {new_name}! Como vai?')\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Material para o Live Coding 2, 02/02/2022, referente à [semana 14 do curso](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem14.html#)\n",
+        "\n",
+        "Os objetivos desse encontro virtual são:\n",
+        "\n",
+        "- Tirar dúvidas quanto à instalação e configuração do Visual Studio Code;\n",
+        "- Manipular strings e listas com Python."
       ]
     },
     {
@@ -786,7 +803,7 @@
         "id": "1N4XLhMVRLLi"
       },
       "source": [
-        "## Listas"
+        "### Listas"
       ]
     },
     {
@@ -863,7 +880,7 @@
         "id": "pwzM4OhxplOl"
       },
       "source": [
-        "### Métodos de listas"
+        "#### Métodos de listas"
       ]
     },
     {
@@ -981,11 +998,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Material para o Live Coding 3, 16/02/2022, referente à [semana 16 do curso](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem16.html#)</small>\n",
+        "\n",
+        "Os objetivos desse encontro virtual são:\n",
+        "\n",
+        "- Entender os controladores de fluxo em Python;\n",
+        "- Executar CLI (Command Line Interface) em Python."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "fidOFPv_plOo"
       },
       "source": [
-        "## Controle de fluxo\n",
+        "### Controle de fluxo\n",
         "\n",
         "[Python Basics 2](https://hub.binder.constellate.org/user/ithaka-tdm-notebooks-mb3z11hb/notebooks/python-basics-2.ipynb) de [Nathan Kelber](http://nkelber.com/) e Ted Lawless"
       ]
@@ -996,7 +1025,7 @@
         "id": "o2i6sCT4plOp"
       },
       "source": [
-        "### Tipos de controle de fluxo\n",
+        "#### Tipos de controle de fluxo\n",
         "\n",
         "\n",
         "|Declaração|Significado|Condição de execução|\n",
@@ -1015,7 +1044,7 @@
         "id": "fGtUM1lMRLLt"
       },
       "source": [
-        "### Criando iterações for\n",
+        "#### Criando iterações for\n",
         "\n",
         "É fundamental entender a estrutura de iteração, realizar um loop com python.\n",
         "\n",
@@ -1090,7 +1119,7 @@
         "id": "HRciswyyplOq"
       },
       "source": [
-        "### while\n",
+        "#### while\n",
         "\n",
         "Fluxo de execução para uma instrução while:\n",
         "\n",
@@ -1125,7 +1154,7 @@
         "id": "48wQi2kLplOs"
       },
       "source": [
-        "### if / elif / else\n",
+        "#### if / elif / else\n",
         "\n",
         "Operações condicionais"
       ]
@@ -1214,6 +1243,13 @@
       },
       "source": [
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Em breve dados sobre CLI em Python"
       ]
     }
   ],
